Updated card hover effect to prevent flickering
Enhanced card hover transition for seamless experience, eliminating flickering and ensuring smooth visual effects.

--- a/assets/css/test-style.css
+++ b/assets/css/test-style.css
@@ -95,10 +95,13 @@
   transform: rotateY(180deg);
 }
 .card{
-  position: relative;
-    transition: all 1s linear;
+    border-radius: 25px;
+    background-color: var(--seashell);
+    height: 300px;
+    position: relative;
+    transition: transform 0.9s ease-in-out; 
     transform-style: preserve-3d;
-    perspective: 1000px;
+    perspective: 1000px; 
 }
 .cardshar{
   position: relative;
